tests/05-bad-goal-input.stderr
error: Relations marked as @input cannot be derived from a rule.
  --> $DIR/05-bad-goal-input.rs:11:9
   |
11 |         In(0, 0) <- (true);
   |         ^^
